css solution to white space issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,6 @@
 .text-animation {
   text-align: center;
   overflow: hidden;
-
   margin: 1000px 0;
 } 
   .text-animation__text {
@@ -29,11 +28,14 @@
 
 
 .text-animation.animate .text-animation__text span{
-
   transform: translate3d(0px, 18vw, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(45deg) skew(0deg, 0deg);
   animation-duration: .5s;
   animation-name: slidein;
   animation-fill-mode: forwards; 
+}
+
+.single-char {
+  white-space:pre;
 }
 
 
